--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Compiled class file
 *.class
 
-# Log file
+# Log files
+/log/
 *.log
 
 # BlueJ files
@@ -21,4 +22,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# all built files
 /target/
