--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<showDeprecation>true</showDeprecation>
+				 <debug>false</debug>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -84,8 +85,14 @@
 				<version>3.2.0</version>
 				<configuration>
 					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>libs/</classpathPrefix>						
+							<mainClass>de.s42.jara.Jara</mainClass>
+						</manifest>
 						<manifestEntries>
 							<Automatic-Module-Name>de.sft.jara</Automatic-Module-Name>
+							<SplashScreen-Image>images/jara-splash-2022.png</SplashScreen-Image>
 						</manifestEntries>
 					</archive>
 				</configuration>
